cambio url imagenes

--- a/Marathon Merida/slider-extendido.html
+++ b/Marathon Merida/slider-extendido.html
@@ -265,9 +265,9 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock06_zpssgrisgf1.png" alt="" />
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock17_zpssijz95il.png" alt="" />
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock04_zpsdjxlagvi.png" alt="" />
+                    <img src="https://i.imgur.com/3GPlstp.png" alt="" />
+                    <img src="https://i.imgur.com/RylxS2c.png" alt="" />
+                    <img src="https://i.imgur.com/LUyzdhZ.png" alt="" />
                 </div>
                 <div class="te-cover">
                     <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock06_zpssgrisgf1.png" alt="" />
@@ -291,7 +291,7 @@
             
 						</span>
                         <div class="logo">
-                            <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock00_zpslcrpmbgl.png" style="height:15px;">
+                            <img src="https://i.imgur.com/wrLrvxJ.png" style="height:15px;">
 
                         </div>
                     </div>
