--- a/Marathon Merida/slider-extendido2.html
+++ b/Marathon Merida/slider-extendido2.html
@@ -265,12 +265,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock21_zpscns399gx.png" alt="" />
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock20_zpsbgisqnsk.png" alt="" />
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock18_zpsrpyvfwc2.png" alt="" />
+                    <img src="https://i.imgur.com/8mE0nmR.png" alt="" />
+                    <img src="https://i.imgur.com/sWTAyAh.png" alt="" />
+                    <img src="https://i.imgur.com/fVNFgmm.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock06_zpssgrisgf1.png" alt="" />
+                    <img src="https://i.imgur.com/fVNFgmm.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -291,7 +291,7 @@
             
 						</span>
                         <div class="logo">
-                            <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock00_zpslcrpmbgl.png" style="height:15px;">
+                            <img src="https://i.imgur.com/wrLrvxJ.png" style="height:15px;">
 
                         </div>
                     </div>
