cambio url imagenes

--- a/Marathon Merida/Cube2.html
+++ b/Marathon Merida/Cube2.html
@@ -535,7 +535,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i192.image.css:image/base/css*/
 #i192 { opacity: 1; }
 /*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 98px; height: 18px;
+#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 97px; height: 18px;
         -ms-transform: translate(0, 0) translate(197px, 225px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(197px, 225px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(197px, 225px) rotate(0deg);
@@ -730,7 +730,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i190.image.css:image/base/css*/
 #i190 { opacity: 1; }
 /*#/#*//*#i190.i191.positioning.css:positioning/base/css.2*/
-#i190 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 98px; height: 18px;
+#i190 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 97px; height: 18px;
         -ms-transform: translate(0, 0) translate(197px, 225px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(197px, 225px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(197px, 225px) rotate(0deg);
@@ -792,7 +792,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i188.image.css:image/base/css*/
 #i188 { opacity: 1; }
 /*#/#*//*#i188.i189.positioning.css:positioning/base/css.2*/
-#i188 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 98px; height: 18px;
+#i188 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 97px; height: 18px;
         -ms-transform: translate(0, 0) translate(197px, 226px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(197px, 226px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(197px, 226px) rotate(0deg);
@@ -834,11 +834,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Si lo tuyo es correr, ¡no te lo puedes perder!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock13_zpslrzdw85k.png"/>
+<img id="i130" src="https://i.imgur.com/DcO7WwG.png"/>
 <!--#/#--><!--#i4.i186.button.html:button/html-->
 <button id="i186">¡¡Regístrate ya!!</button>
 <!--#/#--><!--#i4.i192.image.html:image/html-->
-<img id="i192" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock00_zpslcrpmbgl.png"/>
+<img id="i192" src="https://i.imgur.com/wrLrvxJ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -850,11 +850,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Rockea, corre y ¡diviértete!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock12_zpsr7wxfb5r.png"/>
+<img id="i58" src="https://i.imgur.com/5uAePb6.png"/>
 <!--#/#--><!--#i5.i184.button.html:button/html-->
 <button id="i184">¡¡Regístrate ya!!</button>
 <!--#/#--><!--#i5.i190.image.html:image/html-->
-<img id="i190" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock00_zpslcrpmbgl.png"/>
+<img id="i190" src="https://i.imgur.com/wrLrvxJ.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -866,11 +866,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Pasa una noche diferente: ¡Celebremos el día de los muertos!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock10_zps9pucbqae.png"/>
+<img id="i60" src="https://i.imgur.com/QQfHvkW.png"/>
 <!--#/#--><!--#i6.i181.button.html:button/html-->
 <button id="i181">¡¡Regístrate ya!!</button>
 <!--#/#--><!--#i6.i188.image.html:image/html-->
-<img id="i188" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/MarathonRock00_zpslcrpmbgl.png"/>
+<img id="i188" src="https://i.imgur.com/wrLrvxJ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -931,7 +931,7 @@ bmShow('i192');
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-  
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
@@ -951,7 +951,7 @@ bmShow('i190');
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
@@ -971,7 +971,7 @@ bmShow('i188');
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-   
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -1018,7 +1018,7 @@ customName: false;
 /*#/#*//*#i186.i187.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i192.image.meta:image/meta*/
-name: MarathonRock00_zpslcrpmbgl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: wrLrvxJ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1047,7 +1047,7 @@ customName: false;
 /*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i190.image.meta:image/meta*/
-name: MarathonRock00_zpslcrpmbgl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: wrLrvxJ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1076,7 +1076,7 @@ customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i188.image.meta:image/meta*/
-name: MarathonRock00_zpslcrpmbgl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: wrLrvxJ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
