--- a/Desafio fuego/Cube2.html
+++ b/Desafio fuego/Cube2.html
@@ -1023,6 +1023,19 @@ if ('click' === 'click') {
 
 /*#/#*//*#i243.i244.positioning.js:positioning/base/js.2*/
 bmShow('i243');
+/*#/#*//*#i243.i245.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i243');
+
+el.addEventListener('click', function(e){
+    /*#i245.i246.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1162,9 +1175,7 @@ if ('click' === 'click') {
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-  
-/*#/#*//*#i183.visibility.js:visibility/js*/
+
 function bmShow(id) {
     var el = document.getElementById(id);
     el.classList.remove('visibility-hidden');
