--- a/Desafio fuego/Cube2.html
+++ b/Desafio fuego/Cube2.html
@@ -657,10 +657,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
 #i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(27px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(27px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(27px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(27px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i216.image.css:image/base/css*/
 #i216 { opacity: 1; }
@@ -982,7 +982,7 @@ bmShow('i181');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i216.image.js:image/base/js*/
@@ -995,7 +995,7 @@ var el = document.getElementById('i216');
 
 el.addEventListener('click', function(e){
     /*#i218.i219.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1051,7 +1051,7 @@ bmShow('i241');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i212.image.js:image/base/js*/
@@ -1064,7 +1064,7 @@ var el = document.getElementById('i212');
 
 el.addEventListener('click', function(e){
     /*#i214.i215.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1120,7 +1120,7 @@ bmShow('i198');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i188.image.js:image/base/js*/
@@ -1137,7 +1137,7 @@ if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
 /*#/#*//*#i210.i240.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsite/desafio-sobre-fuego/home'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i6.i192.image.js:image/base/js*/
 
 /*#/#*//*#i192.i193.positioning.js:positioning/base/js.2*/
@@ -1176,6 +1176,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 
+/*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
     el.classList.remove('visibility-hidden');
