--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -126,7 +126,7 @@
         }
 
         .alula_text_title {
-            font-size: 135%;
+            font-size: 148%;
             color: #453936;
             display: inline-block;
             width: 98%;
@@ -327,7 +327,7 @@
         </div>
         <div class="alula_text"> 
             <span class="alula_text_title alula_text_bold">
-             4 Aspectos fundamentales a tener en cuenta para la correcta nutrición de tu bebé.
+             ¿Cómo cuidar la alimentación de tus hijos en sus primeros años?.
             </span>
             <br/>  
             <span class="alula_text_light alula_text_small" style="color:black;">
