--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -327,7 +327,7 @@
         </div>
         <div class="alula_text"> 
             <span class="alula_text_title alula_text_bold">
-             ¿Cómo cuidar la alimentación de tus hijos en sus primeros años?.
+             ¿Cómo cuidar la alimentación de tus hijos en sus primeros años?
             </span>
             <br/>  
             <span class="alula_text_light alula_text_small" style="color:black;">
