--- a/Meridando Mexico/Cube2.html
+++ b/Meridando Mexico/Cube2.html
@@ -627,7 +627,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
+#i20 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -705,7 +705,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
+#i30 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
 #i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -783,7 +783,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -882,7 +882,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Quieres participar en una cata de vinos mexicanos?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/LGSQhN9.png"/>
+<img id="i130" src="https://i.imgur.com/5eONhQ9.png"/>
 <!--#/#--><!--#i4.i188.image.html:image/html-->
 <img id="i188" src="https://i.imgur.com/HuCU2WZ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -902,7 +902,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">¿Te gusta el vino nacional y la comida local?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/6Zie1Oa.png"/>
+<img id="i58" src="https://i.imgur.com/QmcJdMh.png"/>
 <!--#/#--><!--#i5.i220.image.html:image/html-->
 <img id="i220" src="https://i.imgur.com/HuCU2WZ.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -922,7 +922,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Te damos más de 200 razones para que vengas. ¿Cual es la tuya?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/3AgzX1h.png"/>
+<img id="i60" src="https://i.imgur.com/0LFgJNA.png"/>
 <!--#/#--><!--#i6.i222.image.html:image/html-->
 <img id="i222" src="https://i.imgur.com/HuCU2WZ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -972,7 +972,6 @@ document.getElementById('i2').addEventListener('showPrevious', function(e){
 document.getElementById('i2').addEventListener('showNext', function(e){
     cube_i2.rotate(cube_i2.ROTATE_NEXT)
 });
-    
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
 /*#/#*//*#i4.i188.image.js:image/base/js*/
