--- a/Meridando Mexico/Slider.html
+++ b/Meridando Mexico/Slider.html
@@ -243,11 +243,11 @@
              <!--  <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Vive la Experiencia!</span></div> -->
                 
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/LGSQhN9.png" alt="" /> 
-                <img src="https://i.imgur.com/BZh64ro.png" alt="" /> 
-                <img src="https://i.imgur.com/3AgzX1h.png" alt="" /> </div>
+                <img src="https://i.imgur.com/0LFgJNA.png" alt="" /> 
+                <img src="https://i.imgur.com/QmcJdMh.png" alt="" /> 
+                <img src="https://i.imgur.com/5eONhQ9.png" alt="" /> </div>
                 <div class="te-cover">
-                <img src="https://i.imgur.com/LGSQhN9.png" alt="" /> </div>
+                <img src="https://i.imgur.com/5eONhQ9.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
