--- a/Meridando Mexico/Cube2.html
+++ b/Meridando Mexico/Cube2.html
@@ -982,7 +982,7 @@ bmShow('i188');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i181.image.js:image/base/js*/
@@ -995,7 +995,7 @@ var el = document.getElementById('i181');
 
 el.addEventListener('click', function(e){
     /*#i190.i191.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1012,7 +1012,7 @@ var el = document.getElementById('i184');
 
 el.addEventListener('click', function(e){
     /*#i192.i193.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1029,7 +1029,7 @@ var el = document.getElementById('i186');
 
 el.addEventListener('click', function(e){
     /*#i194.i195.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1049,7 +1049,7 @@ bmShow('i220');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i196.image.js:image/base/js*/
@@ -1062,7 +1062,7 @@ var el = document.getElementById('i196');
 
 el.addEventListener('click', function(e){
     /*#i198.i199.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1079,7 +1079,7 @@ var el = document.getElementById('i204');
 
 el.addEventListener('click', function(e){
     /*#i206.i207.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1096,7 +1096,7 @@ var el = document.getElementById('i212');
 
 el.addEventListener('click', function(e){
     /*#i214.i215.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1116,7 +1116,7 @@ bmShow('i222');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i200.image.js:image/base/js*/
@@ -1129,7 +1129,7 @@ var el = document.getElementById('i200');
 
 el.addEventListener('click', function(e){
     /*#i202.i203.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1146,7 +1146,7 @@ var el = document.getElementById('i208');
 
 el.addEventListener('click', function(e){
     /*#i210.i211.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1163,7 +1163,7 @@ var el = document.getElementById('i216');
 
 el.addEventListener('click', function(e){
     /*#i218.i219.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
