--- a/Meridando Mexico/Slider.html
+++ b/Meridando Mexico/Slider.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.maridandomexico.com/';
+                adfClickTAGUrl = 'https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -255,7 +255,7 @@
                 <div style="margin-top:18px; margin-left:0px; margin-right: 1px;">
                     <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:20px; text-align:left;">¿Quieres participar en una cata de vinos mexicanos? </span> <img class="logo" style="margin-top: 20px;" src="https://i.imgur.com/HuCU2WZ.png" alt=""> </div>
                 </div>
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:8px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.maridandomexico.com/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/pl291ZA.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.maridandomexico.com/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/9LUFwCf.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.maridandomexico.com/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/qnrdSlE.png" title="compartir en twitter" width="22" /></a> </span></div>
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:8px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/pl291ZA.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/9LUFwCf.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.maridandomexico.com/?utm_source=Mosaic&utm_medium=CPA&utm_campaign=adicional_vnta" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/qnrdSlE.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
