--- a/Banorte/Cube.html
+++ b/Banorte/Cube.html
@@ -875,7 +875,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Quieres conocer el app financiera mas potente del mercado?</div>
+<div id="i14">¿Quieres conocer la app financiera más potente del mercado?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/O52tZOO.jpg"/>
 <!--#/#--><!--#i4.i192.image.html:image/html-->
@@ -915,7 +915,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Porque tiene Banorte la mejor app del mercado?</div>
+<div id="i34">¿Por qué tiene Banorte la mejor app del mercado?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/ZuEUURu.jpg"/>
 <!--#/#--><!--#i6.i188.image.html:image/html-->
