--- a/Delta/fijobig.html
+++ b/Delta/fijobig.html
@@ -60,7 +60,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/NBTeq8c.jpg");
+            background: url("https://i.imgur.com/W7gVWYz.gif");
             background-size: cover;
         }
 
