cambio imagen y titulo

--- a/Posadas viaja/fade.html
+++ b/Posadas viaja/fade.html
@@ -62,9 +62,9 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/3Qn6bs4.jpg");
+            background: url("https://i.imgur.com/NF6uOeM.png");
             background-size: cover;
-        }
+        } https://i.imgur.com/3Qn6bs4.jpg
 
         .bg.cover-2 {
             background: url("https://i.imgur.com/12yOekG.jpg");
@@ -140,7 +140,7 @@
         }
 
         .value_text_title {
-            font-size: 165%;
+            font-size: 200%;
             color: #453936;
             display: inline-block;
             width: 97%;
@@ -343,7 +343,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             ¿En cual de estos lugares de pasarías una noche gratis de hotel?
+             Reserva 2 noches y te regalamos una.
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
