--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -41,11 +41,11 @@ url('fonts/') format('svg');
 /*#/#*//*#i8.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.2*/
-#i60 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 324px; height: 173px;
+        -ms-transform: translate(0, 0) translate(-12px, -3px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-12px, -3px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-12px, -3px) rotate(0deg);
+        transform: translate(0, 0) translate(-12px, -3px) rotate(0deg);
 }
 /*#/#*//*#i8.i62.text.css:text/base/css*/
 #i62 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -292,11 +292,11 @@ url('fonts/') format('svg');
 #i67 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i67.i68.positioning.css:positioning/base/css.2*/
-#i67 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i67 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i19.i20.shape.css:shape/base/css*/
 #i20 { background-color: #ffffff; opacity: 1;
@@ -520,9 +520,9 @@ url('fonts/') format('svg');
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/EmjHWaJ.jpg"/>
+<img id="i60" src="https://i.imgur.com/trOxmmx.png"/>
 <!--#/#--><!--#i8.i62.text.html:text/html-->
-<div id="i62">¿Donde te gustaría pasar una noche de hotel gratis?</div>
+<div id="i62">Reserva 2 noches y te regalamos una.</div>
 <!--#/#--><!--#i8.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/u5A6594.jpg"/>
 <!--#/#--><!--#i8.i71.button.html:button/html-->
@@ -699,13 +699,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i19.i54.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i19');
 
-el.addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -745,13 +739,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i30.i56.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i30');
 
-el.addEventListener('click', function(e){
-    /*#i56.i57.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -791,13 +779,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i41.i58.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i41');
 
-el.addEventListener('click', function(e){
-    /*#i58.i59.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -829,12 +811,12 @@ name: Background;
 /*#/#*//*#i9.i10.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i60.image.meta:image/meta*/
-name: EmjHWaJ.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: trOxmmx.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i8.i62.text.meta:text/meta*/
-name: ¿Donde te gustaría pasar una noche de hotel gratis?; customName: false;
+name: Reserva 2 noches y te regalamos una.; customName: false;
 /*#/#*//*#i62.i63.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i64.image.meta:image/meta*/
