cambio de titulo

--- a/Delta/video2.html
+++ b/Delta/video2.html
@@ -113,20 +113,20 @@
         .videonew_text {
             position: absolute;
             top: 68%;
-            text-align: center;
-            width: 99%;
+            text-align: left;
+            width: 98%;
             padding: 0.3em;
             line-height: 1.4em;
             color: #453936;
         }
 
         .videonew_text_title {
-            font-size: 120%;
+            font-size: 115%;
             color: #453936;
             
-            width: 99%;
+            width: 98%;
             margin-bottom: 20px;
-            text-align:center;
+            text-align:left;
             line-height: 1.1em;
         }
 
