correccion formato fade

--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -332,7 +332,8 @@
             <br/>  
             <span class="alula_text_light alula_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-    Lo que tu hijo <b>coma hoy impactará su salud por el resto de su vida.</b> Por ello, complementa su alimentación con <b>Progress ALULA Gold Perú</b> con proteínas de <b>alto valor, calcio, nutrientes sin azúcares libres o añadidos</b> que contribuyen a la <b>formación y crecimiento</b> adecuado de tu pequeño.
+    Como padres, uno de los retos más importantes es <b>la correcta nutrición de nuestros hijos </b>en sus primeros años de vida.
+   Sin embargo, decidir por <b>que fórmulas utilizar</b> puede ser difícil, lo más valioso es que esta <b>brinde un crecimiento en peso y talla saludable,</b> para lograr esto es necesario elegir la <b>mejor fórmula infantil...</b>
 
 
                 </p> 
