--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -333,7 +333,7 @@
             <span class="alula_text_light alula_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
     Como padres, uno de los retos más importantes es <b>la correcta nutrición de nuestros hijos </b>en sus primeros años de vida.
-   Sin embargo, decidir por <b>que fórmulas utilizar</b> puede ser difícil, lo más valioso es que esta <b>brinde un crecimiento en peso y talla saludable,</b> para lograr esto es necesario elegir la <b>mejor fórmula infantil...</b>
+   Sin embargo, decidir por <b>qué fórmulas utilizar</b> puede ser difícil, lo más valioso es que esta <b>brinde un crecimiento en peso y talla saludable.</b> Para lograr esto es necesario elegir la <b>mejor fórmula infantil...</b>
 
 
                 </p> 
