--- a/Posadas viaja/fade.html
+++ b/Posadas viaja/fade.html
@@ -348,7 +348,7 @@
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-    <b>Acapulco, Campeche, San Miguel de Allende, Cancún, CDMX, Chetumal...</b> hay más de <b>60 increíbles</b> destinos en México.
+   <b> Reserva del 1 de octubre al 9 de noviembre de 2018 </b>  y viaja hasta el <b>29 de febrero de 2019 </b>, para que viajes a ¡más de 60 increíbles destinos en México!
 
 
                 </p> 
