--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -311,11 +311,11 @@ url('fonts/') format('svg');
 /*#/#*//*#i19.i75.image.css:image/base/css*/
 #i75 { opacity: 1; }
 /*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
-#i75 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i19.i77.button.css:button/base/css*/
 #i77 { position: absolute; cursor: pointer; opacity: 1; background-color: #2e2d67; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px #2e2d67; border-radius: 18px; border-color: #2e2d67; border-width: 1px; margin:-1px; border-style: solid; }
@@ -359,11 +359,11 @@ url('fonts/') format('svg');
 #i87 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
-#i87 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i30.i31.shape.css:shape/base/css*/
 #i31 { background-color: #ffffff; opacity: 1;
@@ -538,7 +538,7 @@ url('fonts/') format('svg');
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i75.image.html:image/html-->
-<img id="i75" src="https://i.imgur.com/WVXuXnB.jpg"/>
+<img id="i75" src="https://i.imgur.com/qIGMR8E.png"/>
 <!--#/#--><!--#i19.i77.button.html:button/html-->
 <button id="i77"></button>
 <!--#/#--><!--#i19.i79.image.html:image/html-->
@@ -845,7 +845,7 @@ name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i19.i75.image.meta:image/meta*/
-name: WVXuXnB.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: qIGMR8E.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i75.i76.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
