--- a/Promoda/Cube.html
+++ b/Promoda/Cube.html
@@ -705,7 +705,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
+#i30 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
 #i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -783,7 +783,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
