--- a/Posadas viaja/index.html
+++ b/Posadas viaja/index.html
@@ -311,11 +311,11 @@ url('fonts/') format('svg');
 /*#/#*//*#i19.i75.image.css:image/base/css*/
 #i75 { opacity: 1; }
 /*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
-#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i75 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i19.i77.button.css:button/base/css*/
 #i77 { position: absolute; cursor: pointer; opacity: 1; background-color: #2e2d67; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px #2e2d67; border-radius: 18px; border-color: #2e2d67; border-width: 1px; margin:-1px; border-style: solid; }
@@ -359,11 +359,11 @@ url('fonts/') format('svg');
 #i87 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
-#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i87 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i30.i31.shape.css:shape/base/css*/
 #i31 { background-color: #ffffff; opacity: 1;
@@ -522,7 +522,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i8.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/trOxmmx.png"/>
 <!--#/#--><!--#i8.i62.text.html:text/html-->
-<div id="i62">Reserva 2 noches y te regalamos una.</div>
+<div id="i62">Reserva del 1 de octubre al 9 de noviembre de 2018</div>
 <!--#/#--><!--#i8.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/u5A6594.jpg"/>
 <!--#/#--><!--#i8.i71.button.html:button/html-->
@@ -544,7 +544,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i19.i79.image.html:image/html-->
 <img id="i79" src="https://i.imgur.com/4fli91p.png"/>
 <!--#/#--><!--#i19.i83.text.html:text/html-->
-<div id="i83">Reserva del 1 de octubre al 9 de noviembre de 2018</div>
+<div id="i83">Reserva 2 noches y te regalamos una.</div>
 <!--#/#--><!--#i19.i85.image.html:image/html-->
 <img id="i85" src="https://i.imgur.com/u5A6594.jpg"/>
 <!--#/#--><!--#i19.i87.shape.html:shape/html-->
@@ -740,7 +740,6 @@ if ('click' === 'click') {
 /*#/#*//*#i30.i56.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 
-
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
@@ -816,7 +815,7 @@ customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i8.i62.text.meta:text/meta*/
-name: Reserva 2 noches y te regalamos una.; customName: false;
+name: Reserva del 1 de octubre al 9 de noviembre de 2018; customName: false;
 /*#/#*//*#i62.i63.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i64.image.meta:image/meta*/
@@ -860,7 +859,7 @@ customName: false;
 /*#/#*//*#i79.i80.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i19.i83.text.meta:text/meta*/
-name: Reserva del 1 de octubre al 9 de noviembre de 2018; customName: false;
+name: Reserva 2 noches y te regalamos una.; customName: false;
 /*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i19.i85.image.meta:image/meta*/
